# ml-with-sklearn

./: 01. Introduction.ipynb  03. Linear classification.ipynb  04. Artificial neural networks.ipynb  05. Deep Neural Networks.ipynb  06. Unsupervised learning and clustering.ipynb  07. Assessment and Parameter Optimization.ipynb  99. Extra - Programming a binary genetic algorithm.ipynb  README.md  pyproject.toml  requirements.txt
fig_code/: figures.py  helpers.py  sgd_separator.py  svm_gui.py
imgs/05/: mnist.py  tools.py
