[tool.poetry]
name = "ml-with-sllearn"
version = "0.0.1"
description = "A live course on using scikit-learn for machine learning"
authors = [
    "Nayat Sanchez-Pi <name.lastname@inria.cl>",
    "Luis Martí <name.lastname@inria.cl>",
]

[tool.poetry.dependencies]
python = "^3.8,<3.12"
scikit-learn = "^1.2.2"
notebook = "*"
ipykernel = "*"
ipywidgets = "*"
pandas = "^2.0.1"
seaborn = "^0.12.2"
tqdm = "^4.65.0"
rise = "^5.7.1"
deap = "^1.3.3"

[tool.poetry.group.dev.dependencies]
black = { extras = ["jupyter"], version = "^23.3.0" }
flake8 = "^3.8.3"
bandit = "1.6.2"
pytest = "^6.0.1"
pytest-cov = "^2.10.1"
nbmake = "^1.4.1"
pytest-xdist = "^3.3.1"

[tool.black]
line-length = 127

[tool.pytest.ini_options]
addopts = "--doctest-modules"
junit_family = "xunit2"
log_cli = true
log_cli_level = "INFO"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
